<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B69DD5"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:srcCompat="@drawable/coffee_and_flowers" />

    <TextView
        android:id="@+id/textViewWelcome"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:lineSpacingExtra="8sp"
        android:text="@string/welcome"
        android:textColor="#6A5331"
        android:textSize="36sp"
        android:textStyle="italic"
        android:typeface="normal" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/hint_name"
        android:inputType="textPersonName"
        android:textColor="#785D35" />


    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:textColor="#785D35" />

    <Button
        android:id="@+id/buttonOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/create_order"
        android:onClick="onClickCreateOrder"

        android:textSize="36sp"
        app:backgroundTint="#614B8A" />
</LinearLayout>