<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateOrderActivity"
    android:background="@color/purple_200">
    
    <TextView
        android:id = "@+id/textViewHello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text = "@string/hello_user"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/purple_700"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="8dp"
        />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewHello"
        tools:ignore="MissingConstraints"
        android:layout_margin="8dp">

        <RadioButton
            android:id = "@+id/radioButtonTea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/choose_tea"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:checked="true"
            android:onClick="onClickChangeDrink"
            />

        <RadioButton
            android:id = "@+id/radioButtonCoffee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/choose_coffee"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:onClick="onClickChangeDrink"/>
    </RadioGroup>

    <TextView
        android:id = "@+id/textViewAdditions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text = "@string/drink_options"
        android:textColor="@color/purple_700"
        app:layout_constraintTop_toBottomOf="@id/radioGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="8dp"
        android:textSize="24sp"
        android:textStyle="bold"
        />

    <CheckBox
        android:id = "@+id/checkBoxMilk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        android:text = "@string/add_milk"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/textViewAdditions"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintRight_toLeftOf="@id/checkBoxSugar"
        android:layout_margin="8dp"
        android:textSize="24sp"
        android:textStyle="bold"/>

    <CheckBox
        android:id = "@+id/checkBoxSugar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        android:text = "@string/add_sugar"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/textViewAdditions"
        app:layout_constraintLeft_toRightOf="@id/checkBoxMilk"
        app:layout_constraintRight_toLeftOf="@id/checkBoxLemon"
        android:layout_margin="8dp"
        android:textSize="24sp"
        android:textStyle="bold"/>
    <CheckBox
        android:id = "@+id/checkBoxLemon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        android:text = "@string/add_lemon"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/textViewAdditions"
        app:layout_constraintLeft_toRightOf = "@id/checkBoxSugar"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="8dp"
        android:textSize="24sp"
        android:textStyle="bold"/>

    <TextView
        android:id = "@+id/textViewChooseDrink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text = "@string/choose_drink"
        android:textColor="@color/purple_700"
        app:layout_constraintTop_toBottomOf="@id/checkBoxSugar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="8dp"
        android:textSize="24sp"
        android:textStyle="bold"
        />

    <Spinner
        android:id = "@+id/spinnerTea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries = "@array/options_of_tea"
        tools:ignore="MissingConstraints"
        app:layout_constraintTop_toBottomOf="@id/textViewChooseDrink"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="visible"
        android:layout_margin="8dp"
        />
    <Spinner
        android:id = "@+id/spinnerCoffee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries = "@array/options_of_coffee"
        tools:ignore="MissingConstraints"
        app:layout_constraintTop_toBottomOf="@id/textViewChooseDrink"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="invisible"
        android:layout_margin="8dp"

        />
    <ImageView
        android:id = "@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        android:src = "@drawable/buttonpurple"
        app:layout_constraintTop_toBottomOf="@id/spinnerTea"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="8dp"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/purple_700"
        android:onClick="onClickSendOrder"
        />




</androidx.constraintlayout.widget.ConstraintLayout>